--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "duplexer2": "0.0.2",
     "inherits": "^2.0.1",
     "multiplex": "^3.0.0",
-    "shell-quote": "^1.4.2"
+    "shell-quote": "^1.4.2",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "level": "~0.18.0",
