--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "batchdb-shell",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "job queue for shell scripts, writing output to blob storage",
   "main": "index.js",
   "dependencies": {
@@ -13,8 +13,9 @@
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "level": "~0.18.0",
     "ansi-color-stream": "^1.0.0",
+    "concat-stream": "^1.4.6",
+    "level": "~0.18.0",
     "mkdirp": "^0.5.0",
     "tape": "^2.13.2"
   },
