fix package.json links

--- a/package.json
+++ b/package.json
@@ -27,16 +27,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/substack/docker-compute.git"
+    "url": "git://github.com/substack/batchdb-shell.git"
   },
-  "homepage": "https://github.com/substack/docker-compute",
+  "homepage": "https://github.com/substack/batchdb-shell",
   "keywords": [
     "batch",
     "compute",
     "queue",
     "jobs",
-    "computing",
-    "docker"
+    "computing"
   ],
   "author": {
     "name": "James Halliday",
